tests/baselines/reference/unknownSymbols2.errors.txt
tests/cases/compiler/unknownSymbols2.ts(2,12): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols2.ts(3,17): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols2.ts(4,14): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols2.ts(5,9): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols2.ts(7,14): error TS2304: Cannot find name 'qwerty'.
tests/cases/compiler/unknownSymbols2.ts(15,13): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols2.ts(16,14): error TS2304: Cannot find name 'qwerty'.
tests/cases/compiler/unknownSymbols2.ts(22,19): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols2.ts(23,32): error TS2304: Cannot find name 'qwerty'.
tests/cases/compiler/unknownSymbols2.ts(29,16): error TS2503: Cannot find namespace 'asdf'.


==== tests/cases/compiler/unknownSymbols2.ts (10 errors) ====
    module M {
        var x: asdf;
               ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        var y = x + asdf;
                    ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        var z = <asdf>x; // should be an error
                 ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        if (asdf) {
            ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        }
        else if (qwerty) {
                 ~~~~~~
!!! error TS2304: Cannot find name 'qwerty'.
        }
    
        try {
        }
        catch (asdf) { // no error
        }
    
        switch (asdf) {
                ~~~~
!!! error TS2304: Cannot find name 'asdf'.
            case qwerty:
                 ~~~~~~
!!! error TS2304: Cannot find name 'qwerty'.
                break;
            default:
                break;
        }
    
        var a = () => asdf;
                      ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        var b = (asdf) => { return qwerty };
                                   ~~~~~~
!!! error TS2304: Cannot find name 'qwerty'.
    
        module N {
            var x = 1;
        }
        import c = N;
        import d = asdf;
                   ~~~~
!!! error TS2503: Cannot find namespace 'asdf'.
    }